# aiguide

./: .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  verify-before-push.sh
.github/: AGENT-QUICK-REFERENCE.md  AGENT-ROLES-AND-SETUP.md  copilot-instructions.md
.github/workflows/: ci.yml  docker-build.yml  e2e-tests.yml
backlog/: README.md
backlog/architecture/: ARCH-001-trip-date-model.md  ARCH-002-plan-mode-routing-and-waypoints.md  ARCH-003-vehicle-profile-and-trip-assignment.md  ARCH-004-stay-discovery-ranking-and-assignment.md  ARCH-005-graph-database-for-places-and-caching.md  ARCH-006-ollama-ai-integration.md  ARCH-007-ui-modes-plan-run-setup.md  ARCHITECTURE-REVISION-SUMMARY.md  ARCHITECTURE_TEMPLATE.md
backlog/epics/: EPIC-001-web-map-trip-planning.md  EPIC-002-plan-mode-daily-routing.md  (+4 more)
docs/: BACKLOG-MANAGEMENT-CONVENTIONS.md  CI-CD.md
prompts/: agent_architect.md  agent_backend.md  agent_devops.md  agent_documentation.md  agent_external_data.md  agent_frontend.md  agent_implementer.md  agent_planner.md  agent_reviewer.md  agent_team_lead.md  agent_test.md  agent_tester.md  agent_ui_design.md  system_prompt.md
tests/: test_workflow.py
web/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile.e2e  EPIC-001-DEV-STATUS.md  FIRST-RUN-CHECKLIST.md  README.md  auth.config.ts  auth.ts  docker-compose.e2e.yml  docker-compose.yml  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
(+315 files in other folders)
